--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "biome check ./src",
+    "check:write": "biome check --write ./src"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.6",
     "typescript": "~5.9.3",
     "vite": "^7.2.2"
   }
