--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
+    "@types/three": "^0.181.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "three": "^0.181.1"
   }
 }
